Update Core
Refactor, Update and rework transactions